--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Display</title>
+    <title>Product List</title>
+    <style>
+        /* Add any necessary CSS styles */
+    </style>
 </head>
 <body>
+    <!--Task 3:Introduce a loading state (loading happens to be the default it switches off of when the loading fails or suceeds.)-->
+    <div id="loading">Loading...</div>
     <div id="product-list">
-  
+        <!-- Product items will be dynamically added here -->
     </div>
 
     <script src="example.js"></script>
