--- a/index.html
+++ b/index.html
@@ -1,39 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product List</title>
     <style>
-          #product-list {
+      /* Global styles */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Product list container */
+      #product-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 20px;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      /* Individual product */
+      .product {
+        width: 300px;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        animation: dropIn 0.5s ease-in-out;
+      }
+
+      @keyframes dropIn {
+        0% {
+          opacity: 0;
+          transform: translateY(-50px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* Product image */
+      .product img {
+        width: 100%;
+        border-radius: 8px;
+      }
+
+      /* Product details */
+      .product h2 {
+        margin-top: 0;
+        font-size: 1.5rem;
+      }
+
+      .product p {
+        color: #555;
+      }
+
+      /*Task 4: Navigation buttons container */
+      .btn-container {
         text-align: center;
-    }
-    .product {
-        margin-bottom: 20px;
-    }
-    .navigation-btn {
-        margin-top: 10px;
-        display: inline-block;
-    }
-    .btn-container {
-        text-align: center; 
-        margin-top: 20px; 
-    }
+        margin-top: 20px;
+      }
+
+      /*Task 4: Navigation buttons */
+      .navigation-btn {
+        padding: 10px 20px;
+        font-size: 1rem;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+      }
+
+      .navigation-btn:hover {
+        background-color: #0056b3;
+      }
     </style>
-</head>
-<body>
-    <!--Loading state will be default that is switched off of when loading is completed-->
+  </head>
+  <body>
+    <!--Task 3: Loading state which will be displayed until products are loaded/failed to load -->
     <div id="loading">Loading...</div>
-    <div id="product-list">
-        <!-- Product items will be dynamically added here -->
-    </div>
 
-    <!-- Navigation buttons -->
+    <!-- Container for product list -->
+    <div id="product-list"></div>
+
+    <!--Task 4: Navigation buttons -->
     <div class="btn-container">
-        <button id="prev-btn" class="navigation-btn">Previous</button>
-        <button id="next-btn" class="navigation-btn">Next</button>
+      <button id="prev-btn" class="navigation-btn">Previous</button>
+      <button id="next-btn" class="navigation-btn">Next</button>
     </div>
-
     <script src="example.js"></script>
-</body>
+  </body>
 </html>
